--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vrobles",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Hi! It's me, Vicky! A personal card for Vicky(@Viki-Robles)",
   "main": "index.js",
   "bin": {
@@ -9,7 +9,8 @@
   "scripts": {
     "prepublish": "npm run build",
     "build": "node build.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "yarn build && node ./bin/card.js"
   },
   "repository": {
     "type": "git",
